--- a/README
+++ b/README
@@ -69,24 +69,11 @@ then type
     sudo newaliases
 
 
-
-Follow us on:
-
-* http://twitter.com/CommunicationForum
-
-* http://identi.ca/CommunicationForum
-
-* http://blog.ricodigo.com/CommunicationForum
-
 Talk to us at:
 
-* irc://irc.freenode.org/CommunicationForum
+* myfriendpro.com
 
-* http://CommunicationForum.com/chat
-
-* contact \aT/ CommunicationForum d0t com
-
-Report bugs at http://CommunicationForum.com and use the tags "bug" or "feature-request"
+Report bugs at http://myfriendpro.com/queries and use the tags "bug" or "feature-request"
 
 
 
